# LearnOPENCV

./: .gitignore  build.sh  build_opencv.sh
eclipse_workspace/.metadata/: version.ini
eclipse_workspace/.metadata/.plugins/org.eclipse.cdt.core/: TestOpenCV.language.settings.xml  shareddefaults.xml
eclipse_workspace/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
eclipse_workspace/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
eclipse_workspace/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
eclipse_workspace/TestOpenCV/: .cproject  .project
eclipse_workspace/TestOpenCV/Debug/: TestOpenCV  makefile  objects.mk  sources.mk
eclipse_workspace/TestOpenCV/src/: TestOpenCV.cpp
opencv_lib/release/lib/: libopencv_calib3d.4.0.0.dylib  libopencv_core.4.0.0.dylib  libopencv_features2d.4.0.0.dylib  libopencv_flann.4.0.0.dylib  libopencv_imgcodecs.4.0.0.dylib  libopencv_ml.4.0.0.dylib  libopencv_objdetect.4.0.0.dylib  libopencv_photo.4.0.0.dylib  libopencv_shape.4.0.0.dylib  libopencv_stitching.4.0.0.dylib  libopencv_superres.4.0.0.dylib  libopencv_video.4.0.0.dylib  libopencv_videoio.4.0.0.dylib  libopencv_videostab.4.0.0.dylib
workspace/BeginOpenCV/: .cproject  .project
workspace/BeginOpenCV/src/: BeginOpenCV.cpp
workspace/TestOpenCV/: .cproject  .project  CMakeLists.txt
workspace/TestOpenCV/src/: TestOpenCV.cpp  dm01.cpp  dm03_maskbit.cpp  dm05_image_process.cpp  dm07_brightness_contrast.cpp
workspace/TestOpenCV/src/include/: dm01.h  dm03_maskbit.h  dm04_mat.h  dm05_image_process.h
(+36 files in other folders)
